Remove 'Try it' from section title

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -99,7 +99,7 @@ ChatGPT、GitHub Copilot等生成式AI工具能夠快速生成完整程式碼\ci
 	\item 反思：每4週撰寫150–200字，採「一錯一改」架構。
 \end{itemize}
 
-\textbf{Try it（本週即可執行）}：
+\textbf{本週即可執行}：
 \begin{enumerate}
 	\item 發放「除錯/設計」提示模板，要求學生本週作業皆附三步驟思考紀錄。
 	\item 設定AI使用日誌表單，每位學生至少提交3筆互動紀錄。
