Update main.tex and sections (introduction, literature, pi)

--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -17,7 +17,7 @@
   {\large
   \textbf{計畫主持人：} 陳文盛 助理教授\\[0.5cm]
   \textbf{執行機構：} 國立東華大學 通識教育中心\\[0.5cm]
-  \textbf{計畫申請日期(Filing Date)：} 114 年 12 月 1 日\\
+  \textbf{計畫申請日期：} 114 年 12 月 1 日\\
   }
   
   \vfill
