--- a/sections/pi.tex
+++ b/sections/pi.tex
@@ -7,7 +7,7 @@
 
 \subsection{計畫主持人相關教學經歷}
 
-在111至113學年度期間，本人於國立東華大學通識教育中心擔任專任教師，主要開設程式設計與人工智慧相關通識課程。教學對象涵蓋全校各學院非資訊背景學生，累計開設22門課程，修課總人數達800人，平均教學評量4.27分。
+在111至113學年度期間，本人於國立東華大學通識教育中心擔任專任教師，主要開設程式設計與人工智慧相關通識課程。教學對象涵蓋全校各學院非資訊背景學生，累計開設22門課程，修課總人數達800人，平均教學評量4.25分。近三年完整教學紀錄如表~\ref{tab:all_courses}所示。
 
 本人教學範疇涵蓋以下四大課程類型：
 
@@ -22,8 +22,6 @@
 
 \item \textbf{科技藝術概論}：跨域結合科技與藝術，探索數位創作的可能性（藝術學院）。
 \end{enumerate}
-
-近三年完整教學紀錄如表~\ref{tab:all_courses}所示。
 
 \begin{table}[htbp]
 \centering
@@ -42,7 +40,7 @@
 初級程式設計－Python & 111 & 2 & AA & 4.03 & 39 & 4.30 \\
 初級程式設計－Python & 112 & 1 & AC & 4.23 & 38 & 4.33 \\
 初級程式設計－Python & 112 & 2 & AA & 4.42 & 50 & 4.16 \\
-初級程式設計－Python & 113 & 1 & AC & 4.21 & 49 & 4.21 \\
+ 初級程式設計－Python & 113 & 1 & AC & 4.21 & 49 & 4.21 \\
 \hline
 \multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.21} & \textbf{227} & --- \\
 \hline
@@ -67,7 +65,7 @@
 人工智慧概論 & 112 & 2 & AB & 3.99 & 35 & 4.16 \\
 人工智慧概論 & 113 & 1 & AA & 4.20 & 50 & 4.21 \\
 \hline
-\multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.22} & \textbf{256} & --- \\
+\multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.21} & \textbf{256} & --- \\
 \hline
 \multicolumn{7}{|c|}{\textbf{創客入門－智慧生活裝置實作（3班次，共90人）}} \\
 \hline
@@ -75,7 +73,7 @@
 創客入門－智慧生活裝置實作 & 111 & 2 & --- & 4.36 & 33 & 4.30 \\
 創客入門－智慧生活裝置實作 & 112 & 1 & --- & 4.19 & 30 & 4.33 \\
 \hline
-\multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.36} & \textbf{90} & --- \\
+\multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.35} & \textbf{90} & --- \\
 \hline
 \multicolumn{7}{|c|}{\textbf{科技藝術概論（1班次，共40人）}} \\
 \hline
@@ -84,14 +82,14 @@
 \multicolumn{4}{|c|}{\textbf{小計平均}} & \textbf{4.31} & \textbf{40} & --- \\
 \hline
 \hline
-\multicolumn{4}{|c|}{\textbf{總計/整體平均}} & \textbf{4.27} & \textbf{800} & \textbf{4.25} \\
+\multicolumn{4}{|c|}{\textbf{總計/整體平均}} & \textbf{4.25} & \textbf{800} & \textbf{4.25} \\
 \hline
 \end{tabular}
 \end{table}
 
 \subsection{教學特色與成效}
 
-綜合111-113學年度教學紀錄，本人共開設22門課程，累計修課人數達800人，平均教學評量4.27分。其中「創客入門」課程（4.36分）與「中級程式設計－虛擬實境」課程（4.28分）表現穩定，但「初級程式設計－Python」課程評量（4.21分）仍有改善空間，需透過更有效的教學設計與AI鷹架支持以提升學生學習成效。
+綜合111-113學年度教學紀錄，本人共開設22門課程，累計修課人數達800人，平均教學評量4.25分。其中「創客入門」課程（4.35分）與「中級程式設計－虛擬實境」課程（4.28分）表現穩定，但「初級程式設計－Python」課程評量（4.21分）仍有改善空間，需透過更有效的教學設計與AI鷹架支持以提升學生學習成效。
 
 本人教學特色與成效主要體現在以下四個方面：
 
@@ -104,7 +102,7 @@
 
 \item \textbf{大班教學經驗}：曾執行50-56人之大班教學（112-2人工智慧概論），對於異質性學習群體的班級經營、差異化教學與學習支持策略有實務經驗。
 
-\item \textbf{持續改進導向}：教學評量穩定維持在4.0分以上，22門課程中有19門達4.2分以上，顯示具備教學反思與持續優化的習慣，符合教學實踐研究之精神。
+\item \textbf{持續改進導向}：教學評量穩定維持在4.0分以上，22門課程中有14門達4.2分以上，顯示具備教學反思與持續優化的習慣，符合教學實踐研究之精神。
 \end{enumerate}
 
 \subsection{與本計畫之關聯性}
@@ -116,7 +114,7 @@
 
 \item \textbf{AI教學應用基礎}：6班次、256人次之AI概論教學經驗，熟悉AI工具在教學中的應用模式與學習影響。
 
-\item \textbf{實踐研究能力}：持續三年穩定之教學表現（4.27分），展現教學反思、設計優化與成效評估能力。
+\item \textbf{實踐研究能力}：持續三年穩定之教學表現（4.25分），展現教學反思、設計優化與成效評估能力。
 
 \item \textbf{跨域教學視野}：涵蓋程式設計、AI、虛擬實境、創客實作等多元課程，具備整合不同教學策略與評量方法的經驗。
 \end{itemize}
