--- a/sections/outcomes.tex
+++ b/sections/outcomes.tex
@@ -3,156 +3,110 @@
 %% 伍、預期完成工作項目與成果
 %% ============================================
 
-\subsubsection{預期完成工作項目與成果}
+\subsection{預期完成工作項目與成果}
 
-\paragraph{研究執行時程}
+\subsubsection{研究執行時程}
 
 \begin{table}[htbp]
 \centering
+\scriptsize
 \caption{研究執行時程}
-\renewcommand{\arraystretch}{1.4}
-\begin{tabular}{|c|p{6cm}|p{5cm}|}
+\label{tab:timeline}
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{|c|p{5cm}|p{4cm}|}
 \hline
 \textbf{期程} & \textbf{工作項目} & \textbf{預期產出} \\
 \hline
 \multicolumn{3}{|c|}{\textbf{準備階段（115年8月--116年1月）}} \\
 \hline
 115年8--9月 & 
-\textbullet~開發AI學習平台\newline
-\textbullet~製作18週課程教材
+開發AI學習平台、製作18週課程教材
 & 
-AI平台beta版\newline
-教材初稿 \\
+AI平台beta版、教材初稿 \\
 \hline
 115年10--12月 & 
-\textbullet~研究工具預試與修訂\newline
-\textbullet~AI平台測試\newline
-\textbullet~教材專家審查
+研究工具預試與修訂、AI平台測試、教材專家審查
 & 
-驗證後研究工具\newline
-AI平台正式版\newline
-教材定稿 \\
+驗證後研究工具、AI平台正式版 \\
 \hline
 116年1月 & 
-\textbullet~課程網站建置\newline
-\textbullet~施測準備
+課程網站建置、施測準備
 & 
-課程網站上線\newline
-施測流程確認 \\
+課程網站上線 \\
 \hline
 \multicolumn{3}{|c|}{\textbf{實施階段（116年2月--6月）}} \\
 \hline
 116年2--3月 & 
-\textbullet~執行引導期教學（1--6週）\newline
-\textbullet~前測、第一次量表施測、反思報告(1)
+執行引導期教學（1--6週）、前測與第一次量表施測
 & 
-前測資料\newline
-第一次量表資料\newline
-反思報告(1) \\
+前測資料、第一次量表資料 \\
 \hline
 116年4月 & 
-\textbullet~執行轉換期教學（7--12週）\newline
-\textbullet~第二次量表施測、訪談、期中專題
+執行轉換期教學（7--12週）、第二次量表施測與訪談
 & 
-第二次量表資料\newline
-訪談逐字稿\newline
-期中專題成果 \\
+第二次量表資料、訪談逐字稿 \\
 \hline
 116年5--6月 & 
-\textbullet~執行自主期教學（13--18週）\newline
-\textbullet~後測、第三次量表施測、期末專題
+執行自主期教學（13--18週）、後測與第三次量表施測
 & 
-後測資料\newline
-第三次量表資料\newline
-期末專題成果 \\
+後測資料、期末專題成果 \\
 \hline
 \multicolumn{3}{|c|}{\textbf{分析撰寫階段（116年6--7月）}} \\
 \hline
 116年6--7月 & 
-\textbullet~資料分析\newline
-\textbullet~撰寫研究報告\newline
-\textbullet~製作教學資源
+資料分析、撰寫研究報告
 & 
-成果報告\newline
-論文初稿\newline
-教學資源包 \\
+成果報告、論文初稿 \\
 \hline
 \end{tabular}
 \end{table}
 
-\paragraph{預期具體成果與KPI}
+\subsubsection{預期成果與KPI}
 
-\paragraph{教學成效KPI}
+\textbf{教學成效指標}：
 
-\begin{table}[h]
+\begin{table}[htbp]
 \centering
+\scriptsize
 \caption{教學成效KPI指標}
-\renewcommand{\arraystretch}{1.25}
-\begin{tabular}{|m{4cm}|m{5cm}|m{4cm}|}
+\label{tab:kpi}
+\renewcommand{\arraystretch}{1.1}
+\begin{tabular}{|m{3cm}|m{4cm}|m{3.5cm}|}
 \hline
 \textbf{KPI項目} & \textbf{衡量指標} & \textbf{預期目標} \\
 \hline
-程式設計能力提升 & 後測成績顯著高於前測 & t檢定達顯著（$p<.05$）、Cohen's d $\geq$ 0.5 \\
+程式設計能力提升 & 後測成績高於前測 & 達統計顯著差異 \\
 \hline
-AI依賴程度下降 & 第三次量表分數低於第一次 & 重複量數ANOVA達顯著 \\
+AI依賴程度下降 & 第三次量表分數低於第一次 & 呈現下降趨勢 \\
 \hline
-SRL能力提升 & 第三次量表分數高於第一次 & 重複量數ANOVA達顯著 \\
+SRL能力提升 & 第三次量表分數高於第一次 & 呈現上升趨勢 \\
 \hline
-期末專題完成率 & 獨立完成期末專題比例 & $\geq$ 70\%（優於113學年31\%） \\
+期末專題完成率 & 獨立完成期末專題比例 & $\geq$ 70\% \\
 \hline
-課程及格率 & 期末成績及格比例 & $\geq$ 75\%（優於113學年47\%） \\
+課程及格率 & 期末成績及格比例 & $\geq$ 75\% \\
 \hline
 \end{tabular}
 \end{table}
 
-\paragraph{研究產出}
+\textbf{研究產出}：
+\begin{itemize}[leftmargin=2em]
+\item \textbf{教學模組}：18週完整課程教材、PBL任務與評量規準、三階段AI提示範本庫
+\item \textbf{研究工具}：Python程式設計能力測驗、AI依賴與SRL量表中文版
+\item \textbf{研究發表}：投稿《教學實踐與研究》期刊1篇、校內教學成果發表1場
+\item \textbf{開放資源}：GitHub開源專案（課程教材、AI提示範本）
+\end{itemize}
 
-\begin{enumerate}
-\item \textbf{教學模組}
-  \begin{itemize}
-  \item 18週完整課程教材（簡報、講義、影片）
-  \item PBL任務與評量規準（含臺灣開放資料應用）
-  \item 三階段AI提示範本庫
-  \end{itemize}
+\subsubsection{預期貢獻}
 
-\item \textbf{研究工具}
-  \begin{itemize}
-  \item Python程式設計能力測驗（含信效度資料）
-  \item AI依賴與SRL量表中文版
-  \end{itemize}
+\textbf{學術貢獻}：
+\begin{itemize}[leftmargin=2em]
+\item 發展「AI鷹架漸退教學模式」，整合認知學徒制\cite{collins1989cognitive}與SRL理論\cite{zimmerman2002becoming}
+\item 提供臺灣高教脈絡下AI輔助程式設計教學的實證資料\cite{lai2020analysis}
+\end{itemize}
 
-\item \textbf{研究發表}
-  \begin{itemize}
-  \item 投稿《教學實踐與研究》期刊1篇
-  \item 校內教學成果發表1場
-  \end{itemize}
-
-\item \textbf{開放資源}
-  \begin{itemize}
-  \item GitHub開源專案（課程教材、AI提示範本）
-  \end{itemize}
-\end{enumerate}
-
-\paragraph{預期影響與貢獻}
-
-\paragraph{學術貢獻}
-
-\begin{enumerate}
-\item \textbf{理論貢獻}：發展「AI鷹架漸退教學模式」，整合既有理論脈絡，如認知學徒制\cite{collins1989cognitive}與SRL理論\cite{zimmerman2002becoming}
-\item \textbf{實證貢獻}：提供臺灣高教脈絡下AI輔助程式設計教學的實證資料，以回應相關文獻所指出之本土研究不足\cite{lai2020analysis}
-\end{enumerate}
-
-\paragraph{實務貢獻}
-
-\begin{enumerate}
-\item \textbf{教學創新}：參考近期系統性研究之啟發\cite{kazemitabaar2024codeaid}，發展可操作的AI鷹架設計原則
-\item \textbf{學生學習}：以自我決定理論為基礎\cite{ryan2000selfdetermination}，透過AI鷹架漸退提升學生自主性
-\item \textbf{推廣應用}：開放教學資源供其他教師參考，並回應相關論述所提出的AI時代教育挑戰\cite{becker2023programming}
-\end{enumerate}
-
-\paragraph{社會影響}
-
-\begin{enumerate}
-\item 回應運算思維素養之培育需求\cite{wing2006computational}
-\item 以負責任AI原則為依據\cite{dignum2019responsible}，建立學生正確使用AI的態度
-\end{enumerate}
+\textbf{實務貢獻}：
+\begin{itemize}[leftmargin=2em]
+\item 發展可操作的AI鷹架設計原則\cite{kazemitabaar2024codeaid}
+\item 透過AI鷹架漸退提升學生自主性\cite{ryan2000selfdetermination}
+\item 開放教學資源供其他教師參考\cite{becker2023programming}
+\end{itemize}
