--- a/sections/pi.tex
+++ b/sections/pi.tex
@@ -9,7 +9,7 @@
 
 在111至113學年度期間，本人於國立東華大學通識教育中心擔任專任教師，主要開設程式設計與人工智慧相關通識課程。教學對象涵蓋全校各學院非資訊背景學生，累計開設22門課程，修課總人數達800人，平均教學評量4.25分。近三年完整教學紀錄如表~\ref{tab:all_courses}所示。
 
-本人教學範疇涵蓋以下四大課程類型：
+本人教學範疇涵蓋以下五大課程類型：
 
 \begin{enumerate}
 \item \textbf{初級程式設計－Python}：針對零基礎學生，從程式思維與基礎語法出發，培養運算思維與問題解決能力。
@@ -91,7 +91,7 @@
 
 綜合111-113學年度教學紀錄，本人共開設22門課程，累計修課人數達800人，平均教學評量4.25分。其中「創客入門」課程（4.35分）與「中級程式設計－虛擬實境」課程（4.28分）表現穩定，但「初級程式設計－Python」課程評量（4.21分）仍有改善空間，需透過更有效的教學設計與AI鷹架支持以提升學生學習成效。
 
-本人教學特色與成效主要體現在以下四個方面：
+本人教學特色與成效主要體現在以下五個方面：
 
 \begin{enumerate}
 \item \textbf{深入理解學習困難}：三年累計教授227位非資訊背景學生學習Python（5班次），對其常見迷思概念、學習障礙與動機問題有第一手觀察與因應經驗，為本計畫之教學設計提供紮實基礎。
