--- a/sections/research_plan.tex
+++ b/sections/research_plan.tex
@@ -3,130 +3,105 @@
 %% 肆、研究設計與執行規劃
 %% ============================================
 
-\subsubsection{研究設計與執行規劃}
+\subsection{研究設計與執行規劃}
 
-\paragraph{研究設計}
+\subsubsection{研究設計}
 
-本研究採用\textbf{前後測對比設計}（pre-post comparison design），參考研究方法學相關論述\cite{creswell2018research}，整合量化與質性資料。分析策略著重可操作性與可重現性。
+本研究採用\textbf{前後測對比設計}，整合量化與質性資料\cite{creswell2018research}，探討AI鷹架漸退教學模式對學生學習成效之影響。
 
-\paragraph{研究問題}
-
-本研究針對以下四個核心問題進行探討：
+\subsubsection{研究問題}
 
 \begin{enumerate}
-\item \textbf{研究問題一（學習成效）}：在三階段AI鷹架漸退模式下，學生的Python程式設計能力是否顯著提升？
-\item \textbf{研究問題二（學習行為轉變）}：學生對AI工具的依賴程度與自我調節學習能力，在三階段教學中如何轉變？
-\item \textbf{研究問題三（學習歷程分析）}：不同階段的AI鷹架設計，如何影響學生的學習策略與問題解決歷程？
-\item \textbf{研究問題四（學習者觀點）}：學生對AI輔助程式設計學習的態度、使用經驗與學習反思為何？
+\item \textbf{學習成效}：學生的Python程式設計能力是否顯著提升？
+\item \textbf{行為轉變}：學生對AI的依賴程度與自我調節學習能力如何轉變？
+\item \textbf{歷程分析}：AI鷹架設計如何影響學生的學習策略？
+\item \textbf{學習者觀點}：學生對AI輔助學習的態度與反思為何？
 \end{enumerate}
 
-\paragraph{研究架構}
+\subsubsection{研究架構}
+
 \begin{itemize}[leftmargin=2em]
-\item \textbf{自變項}：三階段AI鷹架教學介入（引導期→轉換期→自主期）
-\item \textbf{依變項}：Python程式設計能力、AI依賴程度、自我調節學習能力、學習行為模式
+\item \textbf{自變項}：三階段AI鷹架教學（引導期→轉換期→自主期）
+\item \textbf{依變項}：程式設計能力、AI依賴程度、自我調節學習能力
 \item \textbf{控制變項}：教學內容、授課教師、上課時數
 \end{itemize}
 
-\paragraph{研究對象}
+\subsubsection{研究對象}
 
-國立東華大學114學年度第二學期「程式設計與應用」通識課程修課學生，預估50-60人。研究對象為非資訊科系學生，來自人文、理工、管理等不同學院，無程式設計經驗或僅有基礎經驗。
+國立東華大學115學年度第二學期「初級程式設計－Python」通識課程修課學生，預估50--60人。研究對象為非資訊科系學生，無程式設計經驗或僅有基礎經驗。
 
-\paragraph{研究工具}
+\subsubsection{研究工具}
 
-\paragraph{工具一：Python程式設計能力測驗}
+本研究使用以下六項工具蒐集資料：
 
-測驗架構參考CS50P課程設計與內容\cite{cs50p2024}，包含選擇題與程式撰寫題，涵蓋理解、應用、分析、創造四個認知層次。僅描述施測方法與題型設計原則，本計畫不進行效度、預試與信度結果報告。
-
-\paragraph{工具二：AI依賴與自我調節學習量表}
-
-包含AI使用態度分量表（12題）與SRL能力分量表（23題），採用Likert 5點量表。僅描述題構與施測流程，本計畫不報告建構效度與信度數值。
-
-\textbf{施測時間}：第6週（引導期末）、第12週（轉換期末）、第17週（自主期末），共三次施測。
-
-\paragraph{短版量表說明} 為降低施測負擔並提升完測率,本計畫三時點皆採用短版題構(總題數16–20題),涵蓋目標設定、計畫監控、策略調整、反思與AI使用品質等核心面向;施測時間控制於15分鐘內,計算各構念總分以簡化後續分析。
-
-\paragraph{工具三：PBL專題評量規準}
-
-評量向度：程式碼正確性（30\%）、問題分析深度（25\%）、介面設計（20\%）、創意應用（15\%）、學習反思（10\%）。僅說明評分構面與規準設計，本計畫不報告評分者間信度數值。
-
-\paragraph{工具四：AI互動紀錄}
-
-學生互動資料之分析與分類，參考既有研究提出的架構\cite{prather2024weird}。
-
-\paragraph{日誌欄位設計} 問題類型、先嘗試步驟、AI提示摘要、採納或拒絕理由、修正重點與驗證方式（測試/輸入輸出檢查）。每週建議提交3–5筆紀錄，期中與期末彙整自我觀察。
-
-\paragraph{工具五：學習反思報告}
-
-每4週撰寫1次（共4次），質性分析採用主題分析法\cite{braun2006thematic}。
-
-\paragraph{工具六：焦點團體訪談}
-
-第12週進行2場訪談，每場6-8人，約60分鐘。
-
-\paragraph{資料蒐集時程}
-
-\begin{table}[h]
+\begin{table}[htbp]
 \centering
-\caption{資料蒐集時程與研究問題對應}
-\renewcommand{\arraystretch}{1.25}
-\begin{tabular}{|l|m{5.5cm}|m{5cm}|}
+\scriptsize
+\caption{研究工具一覽}
+\label{tab:research_tools}
+\renewcommand{\arraystretch}{1.05}
+\begin{tabular}{|m{2cm}|m{3.8cm}|m{3.5cm}|}
 \hline
-\textbf{時間} & \textbf{資料類型} & \textbf{對應研究問題} \\
+\textbf{工具} & \textbf{內容說明} & \textbf{施測時間} \\
 \hline
-第2週 & Python前測 & 研究問題一：學習成效 \\
+Python能力測驗 & 選擇題與程式撰寫題 & 第2週（前測）、第17週（後測） \\
 \hline
-第6週 & 第一次量表施測（引導期末）、反思報告(1) & 研究問題二：學習行為轉變 \\
+SRL與AI使用量表 & 短版量表16--20題 & 第6、12、17週 \\
 \hline
-第10週 & 反思報告(2) & 研究問題四：學習者觀點 \\
+PBL專題評量 & 程式正確性、問題分析等五向度 & 第12週、第18週 \\
 \hline
-第12週 & 第二次量表施測（轉換期末）、焦點團體訪談、期中專題 & 研究問題二、三、四 \\
+AI互動日誌 & 問題類型、嘗試步驟、採納理由 & 每週3--5筆 \\
 \hline
-第14週 & 反思報告(3) & 研究問題四：學習者觀點 \\
+學習反思報告 & 150--200字，「一錯一改」架構 & 每4週1次 \\
 \hline
-第17週 & Python後測、第三次量表施測（自主期末） & 研究問題一、二 \\
-\hline
-第18週 & 期末專題、反思報告(4) & 研究問題一、四 \\
-\hline
-全學期 & AI互動紀錄 & 研究問題三：學習歷程分析 \\
+焦點團體訪談 & 每場6--8人，約60分鐘 & 第12週（2場） \\
 \hline
 \end{tabular}
 \end{table}
 
-\paragraph{資料分析方法}
+\subsubsection{資料蒐集時程}
 
-\paragraph{量化資料分析}
+\begin{table}[htbp]
+\centering
+\scriptsize
+\caption{資料蒐集時程}
+\label{tab:data_collection}
+\renewcommand{\arraystretch}{1.05}
+\begin{tabular}{|c|m{4.5cm}|m{3cm}|}
+\hline
+\textbf{週次} & \textbf{資料類型} & \textbf{對應研究問題} \\
+\hline
+第2週 & Python前測 & 學習成效 \\
+\hline
+第6週 & 第一次量表、反思報告 & 行為轉變 \\
+\hline
+第12週 & 第二次量表、訪談、期中專題 & 行為、歷程、觀點 \\
+\hline
+第17週 & Python後測、第三次量表 & 學習成效、行為轉變 \\
+\hline
+第18週 & 期末專題、反思報告 & 學習成效、觀點 \\
+\hline
+全學期 & AI互動日誌 & 歷程分析 \\
+\hline
+\end{tabular}
+\end{table}
 
-\begin{enumerate}
-\item \textbf{Python程式設計能力}（對應研究問題一）：前後測分數比較、paired t-test、效果量Cohen's d。
-\item \textbf{AI依賴與SRL能力轉變}（對應研究問題二）：三時點量表資料（第6、12、17週），使用Friedman test檢驗趨勢變化；計算各構念總分以簡化分析。
-\item \textbf{AI互動行為}（對應研究問題三）：以「先嘗試後求助」比例為核心指標，依三階段（引導/轉換/自主）統計平均值與變化趨勢；另統計問題類型分布（debugging/design/optimization）。
-\end{enumerate}
+\subsubsection{資料分析方法}
 
-\paragraph{質性資料分析}
-
-針對學習反思與訪談資料（研究問題四），採用主題分析法（thematic analysis）\cite{braun2006thematic}；聚焦三主題（自我調節、AI依賴、學習策略），雙人編碼並報告一致性（Cohen's Kappa或文字說明）。
-
-\paragraph{資料整合}
-
-採用三角檢證法（triangulation），以圖表呈現量化趨勢並搭配質性引文，對照各階段學習策略轉變。
-
-\paragraph{介入忠誠度與誠信機制}
-\begin{itemize}
-	\item \textbf{介入忠誠度}：每週記錄提示模板使用率與教學步驟執行情況（教師/助教勾選），確保三階段設計一致。
-	\item \textbf{誠信機制}：期末專題須附「AI使用揭露」與「可重現性說明」，並提供最少3項測試證據（單元測試或輸入/輸出檢驗）。
+\textbf{量化分析}：
+\begin{itemize}[leftmargin=2em]
+\item 前後測比較：比較學期初與學期末成績差異
+\item 三時點量表：分析第6、12、17週量表分數變化趨勢
+\item AI互動行為：統計學生「先嘗試後求助」的比例變化
 \end{itemize}
 
-\paragraph{立即行動（Try it）}
-\begin{enumerate}
-	\item 發放並使用「除錯/設計」提示模板，要求作業附三步驟思考紀錄。
-	\item 建立AI使用日誌表單，學生每週完成至少3筆紀錄並於課堂分享1則案例。
-	\item 期中前導入「錯誤類型卡」，引導學生以自我診斷框架進行除錯與反思。
-\end{enumerate}
+\textbf{質性分析}：
+採用主題分析法\cite{braun2006thematic}，聚焦自我調節、AI依賴、學習策略三主題，雙人編碼確保信度。
 
-\paragraph{研究倫理}
+\subsubsection{研究倫理}
 
-\begin{enumerate}
-\item \textbf{知情同意}：開學第一週向學生說明研究目的與資料使用方式，學生簽署知情同意書
-\item \textbf{資料保護}：所有資料去識別化處理，僅供學術研究使用
-\item \textbf{AI使用揭露}：參考相關建議\cite{becker2023programming}，明確告知AI使用規範與學術誠信要求
-\end{enumerate}
+\begin{itemize}[leftmargin=2em]
+\item \textbf{知情同意}：開學第一週說明研究目的，學生簽署同意書
+\item \textbf{資料保護}：所有資料去識別化，僅供學術研究
+\item \textbf{AI使用揭露}：明確告知使用規範與學術誠信要求\cite{becker2023programming}
+\end{itemize}
