style: standardize table formatting - left-aligned, consistent font size, increased row spacing

--- a/sections/outcomes.tex
+++ b/sections/outcomes.tex
@@ -9,11 +9,11 @@
 
 \begin{table}[htbp]
 \centering
-\scriptsize
+\footnotesize
 \caption{研究執行時程}
 \label{tab:timeline}
-\renewcommand{\arraystretch}{1.2}
-\begin{tabular}{|c|p{5cm}|p{4cm}|}
+\renewcommand{\arraystretch}{1.5}
+\begin{tabular}{|c|L{5cm}|L{4cm}|}
 \hline
 \textbf{期程} & \textbf{工作項目} & \textbf{預期產出} \\
 \hline
@@ -67,11 +67,11 @@ AI平台beta版、教材初稿 \\
 
 \begin{table}[htbp]
 \centering
-\scriptsize
+\footnotesize
 \caption{教學成效KPI指標}
 \label{tab:kpi}
-\renewcommand{\arraystretch}{1.1}
-\begin{tabular}{|m{3cm}|m{4cm}|m{3.5cm}|}
+\renewcommand{\arraystretch}{1.4}
+\begin{tabular}{|L{3cm}|L{4cm}|L{3.5cm}|}
 \hline
 \textbf{KPI項目} & \textbf{衡量指標} & \textbf{預期目標} \\
 \hline
