--- a/sections/pi.tex
+++ b/sections/pi.tex
@@ -25,11 +25,11 @@
 
 \begin{table}[htbp]
 \centering
-\small
+\footnotesize
 \caption{111-113學年度完整教學紀錄（按課程類型分類）}
 \label{tab:all_courses}
-\tiny
-\setlength{\tabcolsep}{2.5pt}
+\setlength{\tabcolsep}{3pt}
+\renewcommand{\arraystretch}{1.3}
 \begin{tabular}{|l|c|c|c|c|c|c|}
 \hline
 \textbf{課程名稱} & \textbf{學年度} & \textbf{學期} & \textbf{班別} & \textbf{評量} & \textbf{人數} & \textbf{該學期平均} \\
