--- a/sections/research_plan.tex
+++ b/sections/research_plan.tex
@@ -36,11 +36,11 @@
 
 \begin{table}[htbp]
 \centering
-\scriptsize
+\footnotesize
 \caption{研究工具一覽}
 \label{tab:research_tools}
-\renewcommand{\arraystretch}{1.05}
-\begin{tabular}{|m{2cm}|m{3.8cm}|m{3.5cm}|}
+\renewcommand{\arraystretch}{1.4}
+\begin{tabular}{|L{2cm}|L{3.8cm}|L{3.5cm}|}
 \hline
 \textbf{工具} & \textbf{內容說明} & \textbf{施測時間} \\
 \hline
@@ -63,11 +63,11 @@ AI互動日誌 & 問題類型、嘗試步驟、採納理由 & 每週3--5筆 \\
 
 \begin{table}[htbp]
 \centering
-\scriptsize
-\caption{資料蒐集時程}
+\footnotesize
+\caption{資料蒸集時程}
 \label{tab:data_collection}
-\renewcommand{\arraystretch}{1.05}
-\begin{tabular}{|c|m{4.5cm}|m{3cm}|}
+\renewcommand{\arraystretch}{1.4}
+\begin{tabular}{|c|L{4.5cm}|L{3cm}|}
 \hline
 \textbf{週次} & \textbf{資料類型} & \textbf{對應研究問題} \\
 \hline
