refactor: split introduction into two balanced subsections with expanded research scope and objectives

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \input{sections/research_plan}
 \input{sections/outcomes}
 
-\printbibliography[title=參考文獻]
+\subsection{參考文獻}
+\printbibliography[heading=none]
     
-\end{document}  
+\end{document}   
