--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,7 +1,7 @@
 
 \section{計畫執行內容}
 
-\subsection{研究動機與背景}
+\subsection{教學實踐研究計畫動機}
 \label{sec:introduction}
 
 \subsubsection{教學問題脈絡}
@@ -95,6 +95,8 @@
 透過結構化提示模板引導學生建立有效的AI協作學習策略，
 詳細教學設計與評量機制請見第\ref{sec:teaching_design}節。
 
+\subsection{教學實踐研究計畫研究主題與目的}
+
 \subsubsection{研究問題}
 
 本研究擬探討以下四個核心問題：
@@ -108,5 +110,28 @@
 如何影響學生的學習策略、認知負荷與問題解決歷程？
 \item \textbf{學習者觀點}：學生對AI輔助程式設計學習的態度、使用經驗、
 困難挑戰與學習反思為何？如何評價此教學模式？
+\end{enumerate}
+
+\subsubsection{研究主題與範圍}
+
+本研究聚焦「AI鷹架漸退式教學模式」於非資訊背景學生的初級Python課程之應用，核心範圍包含：
+
+\begin{itemize}
+\item 課程情境：18週、通識課程、50--60名零基礎或基礎程度學生
+\item 教學策略：三階段AI鷹架漸退（引導期→轉換期→自主期），搭配PBL任務與SRL鷹架
+\item AI使用規範：先思考、後求助、再驗證；提示模板、錯誤診斷卡、AI使用日誌與反思報告
+\item 評量面向：Python能力、AI依賴程度、SRL行為、專題作品、AI揭露與可重現性
+\end{itemize}
+
+\subsubsection{研究目的}
+
+綜上，本研究旨在：
+
+\begin{enumerate}
+\item 建構並實證一套「AI鷹架漸退式」教學模式，驗證其對程式學習成效與自主性之影響。
+\item 剖析學生AI互動歷程，釐清鷹架設計（提示結構、頻率、回饋）與學習行為／認知負荷之關聯。
+\item 降低AI過度依賴，提升自我調節學習（目標設定、監控、反思）的實作循環。
+\item 產出可重複使用的教學資源：三階段提示範本庫、AI使用規範、評量規準與可重現性檢核流程。
+\item 提供負責任AI教學實務指引，協助教師平衡AI支持與學生自主性，並可推廣至其他初階程式課程。
 \end{enumerate}
 
